--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "matplotlib>=3.10.6",
     "numpy>=2.3.2",
+    "seaborn>=0.13.2",
     "tensorboard>=2.20.0",
     "torch>=2.8.0",
     "torchvision>=0.23.0",
